# City3D

./: .gitignore  00_build_city3d.sh  00_rebuild_city3d.sh  00_rebuild_city3d_and_easy3d.sh  01_recreate_ign_dir.sh  01_recreate_venv.sh  02_footprints_to_obj.py  02_preprocess_datasets.py  02_recreate_ign_dir.sh  03_generate_buildings.sh  03_lidar_to_ply_extracts.py  03_recenter_dataset.py  03_shift_input_dataset.py  04_generate_buildings.sh  04_generate_params_file.sh  04_merge_raw_results.py  04_shift_input_datasets.py  05_add_missing_vertices_to_ground_face.py  05_add_missing_vertices_to_other_faces.py  05_ensure_footprints_below_pcd.py  05_generate_buildings.sh  06_cleanup_results.sh  06_fix_result_with_cgal.sh  06_generate_buildings.sh  06_merge_results.py  06_shift_results.py  07_clean_results_vertices_edges.py  07_fix_result_with_cgal.sh  07_fix_results_add_vertices_to_footprint.py  07_merge_results.py  07_polygonalization_with_easy3d.sh  07_retry_failed_buildings.sh  07_shift_results.py  08_fix_result_with_cgal.sh  08_merge_results.py  08_shift_results.py  09_merge_results.py  09_polygonalization_with_easy3d.sh  09_retry_failed_buildings.sh  09_shift_results.py  (+27 more)
CLI_Easy3D_Fix/: CMakeLists.txt  basic.cpp  main.cpp  triangle.cpp
code/: CMakeLists.txt
code/CLI_Alpha_Wrapper/: main.cpp
code/CLI_Clean_Mesh/: CMakeLists.txt  main.cpp  main.cpp.backup
code/CLI_IGN_Check_Results_Directory/: CMakeLists.txt  main.cpp
code/CLI_IGN_LIDAR/: main.cpp
code/CLI_IGN_LIDAR_Footprints/: main.cpp
code/CLI_Simplify_Mesh/: main.cpp
old_code_and_first_tries/: 02_footprints_to_obj.py  03_lidar_to_ply_extracts.py  07_clean_results_vertices_edges.py  xx_fix_results_add_vertices_to_footprint.py
